# Open3D

./: CMakeLists.txt  build_and_test.sh  eigen_test.py  find_dependencies.cmake  main.cpp  openblas.cmake  run.ps1  run.sh  test.py
.github/workflows/: macos.yml  ubuntu.yml  windows.yml
cpp/: CMakeLists.txt
cpp/benchmarks/core/: Reduction.cpp
cpp/benchmarks/tgeometry/: PointCloud.cpp
cpp/open3d/: CMakeLists.txt  Open3D.h.in  Open3DConfig.cpp
cpp/open3d/camera/: PinholeCameraTrajectory.cpp  PinholeCameraTrajectory.h
cpp/open3d/core/: AdvancedIndexing.cpp  CMakeLists.txt  Dispatch.h  Dtype.cpp  Dtype.h  EigenConverter.cpp  Indexer.cpp  Indexer.h  Tensor.cpp  Tensor.h  TensorKey.h  TensorList.h
cpp/open3d/core/kernel/: BinaryEW.cpp  BinaryEW.h  BinaryEWCPU.cpp  BinaryEWCUDA.cu  NonZeroCPU.cpp  NonZeroCUDA.cu  ReductionCPU.cpp  ReductionCUDA.cu  UnaryEWCPU.cpp  UnaryEWCUDA.cu
cpp/open3d/core/linalg/: Inverse.cpp  LeastSquares.cpp  LinalgUtils.h  Matmul.cpp  SVD.cpp  Solve.cpp
cpp/open3d/core/op/linalg/: Matmul.cpp  Matmul.h  MatmulCPU.cpp  TestMatmul.cpp
cpp/open3d/geometry/: BoundingVolume.cpp  BoundingVolume.h
cpp/open3d/io/file_format/: FileASSIMP.cpp
cpp/open3d/io/rpc/: RemoteFunctions.cpp  RemoteFunctions.h
cpp/open3d/ml/PyTorch/Misc/: ReduceSubarraysSumOpKernel.cu
cpp/open3d/ml/TensorFlow/: CMakeLists.txt
cpp/open3d/ml/contrib/: GridSubsampling.cpp  GridSubsampling.h
cpp/open3d/ml/tensorflow/: CMakeLists.txt
cpp/open3d/tgeometry/: Image.h  PointCloud.h
cpp/open3d/utility/: Helper.cpp  Helper.h
cpp/pybind/: CMakeLists.txt  _build_config.py.in  make_python_package.cmake  open3d_pybind.cpp  open3d_pybind.h  pybind_utils.cpp  pybind_utils.h
cpp/pybind/core/: core.cpp  core.h  dtype.cpp  tensor.cpp
cpp/pybind/geometry/: boundingvolume.cpp
cpp/pybind/io/: rpc.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/core/: Densor.cpp  Indexer.cpp  Linalg.cpp  Tensor.cpp  TensorList.cpp
cpp/tests/tgeometry/: Image.cpp  PointCloud.cpp  TensorListMap.cpp
examples/cpp/: FileDialog.cpp  FileSystem.cpp
python/open3d/: __init__.py  core.py
python/test/core/: test_core.py
util/scripts/: run-ci.sh
